syntax = "proto2";

package proto.bolt;

enum ActivationFunction {
  RELU = 0;
  SOFTMAX = 1;
  SIGMOID = 2;
  TANH = 3;
  LINEAR = 4;
}